# registry

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_GATING.md  LICENSE  README.md  blog-outline.md  blog.md  openweather-connector-blog-data.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: AGENTS.md  README.md  settings.json  (+1 more)
connector-registry/sap-hana-cdc/v1/514-labs/python/default/: .env.ds4  .gitignore  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  test_client_removal.py  test_ensure_table_exists.py  test_get_changes_modified.py  test_status_table.py  test_table_exists.py  test_update_client_status.py
connector-registry/sap-hana-cdc/v1/514-labs/python/default/_meta/: LICENSE  README.md  connector.json
connector-registry/sap-hana-cdc/v1/514-labs/python/default/docs/: configuration.md  getting-started.md  limits.md  schema.md
connector-registry/sap-hana-cdc/v1/514-labs/python/default/examples/: basic_usage.py  console_streamer.py
connector-registry/sap-hana-cdc/v1/514-labs/python/default/moose/: lineage.manifest.json
connector-registry/sap-hana-cdc/v1/514-labs/python/default/schemas/: index.json
connector-registry/sap-hana-cdc/v1/514-labs/python/default/src/sap_hana_cdc/: __init__.py  base.py  config.py  connection_manager.py  connector.py  extractor.py  infrastructure.py  models.py  monitor.py  reader.py  streamer.py
connector-registry/sap-hana-cdc/v1/514-labs/python/default/tests/: INTEGRATION_TESTS.md  README.md  __init__.py  check_test_config.py  conftest.py  test_client.py  test_config.py  test_connector.py  test_infrastructure.py  test_models.py  test_reader.py
connector-registry/shopify/v2025-07/514-labs/python/data-api/: .gitignore  README.md  pyproject.toml  setup.sh  version.sh
connector-registry/shopify/v2025-07/514-labs/python/data-api/docs/: configuration.md  schema.md
connector-registry/shopify/v2025-07/514-labs/python/data-api/schemas/: index.json
connector-registry/shopify/v2025-07/514-labs/python/data-api/test/: run_all_phases.py  test_phase2.py  test_phase3.py  test_read_inventory_subset.py  test_read_orders_subset.py
pipeline-registry/shopify-pipeline/v2025-07/514-labs/python/default/: .gitignore  README.md  pyproject.toml  requirements.txt
pipeline-registry/shopify-pipeline/v2025-07/514-labs/python/default/docs/: configuration.md  getting-started.md  outputs.md
pipeline-registry/shopify-pipeline/v2025-07/514-labs/python/default/examples/: basic_usage.py
pipeline-registry/shopify-pipeline/v2025-07/514-labs/python/default/scripts/: etl_to_stage.py  lineage.py  load_from_stage.py
pipeline-registry/shopify-pipeline/v2025-07/514-labs/python/default/tests/: test_runner.py
(+2086 files in other folders)
