[project]
name = "shopify-connector"
version = "0.1.8"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [ { name = "514-labs" } ]
dependencies = [
  "pydantic>=2.0.0",
  "requests>=2.28.0",
  "httpx>=0.24.0",
  "structlog>=23.0.0",
  "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.10.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "build>=1.2.2.post1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

